spec/e2e/variable/collide_with_parameter.lit
fn foo { |a|
  var a # error: [line 2] Syntax error at "a": Already a variable with this name in this scope.
}
